--- a/.github/workflows/playwright-reusable-pnpm.yml
+++ b/.github/workflows/playwright-reusable-pnpm.yml
@@ -45,6 +45,19 @@ jobs:
             **/pnpm-lock.yaml
             **/package.json
           registry-url: "https://npm.pkg.github.com"
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.15.0
+      - name: Cache pnpm files
+        uses: actions/cache@v5
+        with:
+          path: |
+            ~/.pnpm-store
+
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
       - name: Install dependencies
         env:
           NPM_AUTH_TOKEN: ${{ secrets.npm_reader_token }}
