--- a/.github/workflows/playwright-reusable-pnpm.yml
+++ b/.github/workflows/playwright-reusable-pnpm.yml
@@ -87,18 +87,28 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ inputs.node-version }}
-          cache: "pnpm"
-          cache-dependency-path: |
-            **/pnpm-lock.yaml
-            **/package.json
           registry-url: "https://npm.pkg.github.com"
-      - name: Install dependencies
-        env:
-          NPM_AUTH_TOKEN: ${{ secrets.npm_reader_token }}
-          NODE_AUTH_TOKEN: ${{ secrets.npm_reader_token }}
-        run: |
-          corepack enable
-          pnpm install --frozen-lockfile
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.15.0
+      - name: Cache pnpm files
+        uses: actions/cache@v5
+        with:
+          path: |
+            ~/.pnpm-store
+
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
+      - run: pnpm install --frozen-lockfile
+      - name: Cache Next.js build cache
+        uses: actions/cache@v5
+        with:
+          path: .next/cache
+          key: ${{ runner.os }}-next-cache-${{ hashFiles('pnpm-lock.yaml', 'next.config.js', 'tsconfig.json') }}
+          restore-keys: |
+            ${{ runner.os }}-next-cache-
       - name: Download blob reports from GitHub Actions Artifacts
         uses: actions/download-artifact@v5
         with:
