--- a/.github/workflows/playwright-reusable-pnpm.yml
+++ b/.github/workflows/playwright-reusable-pnpm.yml
@@ -37,27 +37,16 @@ jobs:
       matrix: ${{ fromJSON(inputs.matrix) }}
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-node@v4
-        with:
-          node-version: ${{ inputs.node-version }}
-          cache: "pnpm"
-          cache-dependency-path: |
-            **/pnpm-lock.yaml
-            **/package.json
-          registry-url: "https://npm.pkg.github.com"
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8.15.0
-      - name: Cache pnpm files
-        uses: actions/cache@v5
+      - uses: actions/setup-node@v4
         with:
-          path: |
-            ~/.pnpm-store
-
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
+          node-version: ${{ inputs.node-version }}
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
+          registry-url: "https://npm.pkg.github.com"
       - name: Install dependencies
         env:
           NPM_AUTH_TOKEN: ${{ secrets.npm_reader_token }}
@@ -84,23 +73,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-node@v4
-        with:
-          node-version: ${{ inputs.node-version }}
-          registry-url: "https://npm.pkg.github.com"
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8.15.0
-      - name: Cache pnpm files
-        uses: actions/cache@v5
+      - uses: actions/setup-node@v4
         with:
-          path: |
-            ~/.pnpm-store
-
-          key: ${{ runner.os }}-pnpm-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
+          node-version: ${{ inputs.node-version }}
+          cache: "pnpm"
+          cache-dependency-path: pnpm-lock.yaml
+          registry-url: "https://npm.pkg.github.com"
       - run: pnpm install --frozen-lockfile
       - name: Cache Next.js build cache
         uses: actions/cache@v5
