--- a/.github/workflows/playwright-reusable-pnpm.yml
+++ b/.github/workflows/playwright-reusable-pnpm.yml
@@ -80,7 +80,16 @@ jobs:
           cache-dependency-path: pnpm-lock.yaml
           registry-url: "https://npm.pkg.github.com"
       - run: pnpm install --frozen-lockfile
+      - name: Check Next.js cache presence
+        id: check-next-cache
+        run: |
+          if [ -d .next/cache ]; then
+            echo "has_cache=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "has_cache=false" >> "$GITHUB_OUTPUT"
+          fi
       - name: Cache Next.js build cache
+        if: ${{ steps.check-next-cache.outputs.has_cache == 'true' }}
         uses: actions/cache@v5
         with:
           path: .next/cache
